# rwd

./: .gitignore  Cargo.toml  log4rs.yaml  questions.json
handle-errors/: Cargo.toml
handle-errors/src/: lib.rs  lib.rs.bk
migrations/: 20250425143302_questions_table.up.sql  20250425150154_answers.down.sql  20250425150154_answers.up.sql
src/: main.rs  main.rs.bk  profanity.rs  store.rs  store.rs.bk
src/routes/: .question.rs.swp  answer.rs  question.rs  question.rs.bk  question.rs.bk1
src/types/: answer.rs  pagination.rs  pagination.rs.bk  question.rs
statics/: form.html
