[package]
name = "rwd"
version = "0.1.0"
edition = "2024"

[dependencies]
parking_lot = "0.12.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
warp = "0.3.7"
handle-errors = { path = "handle-errors" }
log = "0.4.27"
env_logger = "0.11.8"
log4rs = "1.3.0"
uuid = { version = "1.16.0", features = ["v4"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "migrate", "postgres"] }
